<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/ic_action_search"
        android:showAsAction="ifRoom|collapseActionView|withText"
        android:title="@string/do_search">
    </item>
    <item
        android:id="@+id/menu_scan_qr"
        android:icon="@drawable/scan_qr_blue"
        android:showAsAction="ifRoom|withText"
        android:title="@string/scan_qr">
    </item>
    <item
        android:id="@+id/menu_make_review"
        android:showAsAction="ifRoom" android:title="@string/make_review">
    </item>
    <item
        android:id="@+id/menu_make_update_to_review"
        android:showAsAction="ifRoom" android:title="@string/make_update_review">
    </item>
    <item
        android:id="@+id/ask_friend"
        android:showAsAction="ifRoom" android:title="@string/ask_friend">
    </item>
    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_settings"/>
    <item
        android:id="@+id/menu_clear_search_history"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_clear_search_history"/>

</menu>